testdata/baselines/reference/submodule/conformance/jsdocConstructorFunctionTypeReference.errors.txt
jsdocConstructorFunctionTypeReference.js(8,12): error TS2749: 'Validator' refers to a value, but is being used as a type here. Did you mean 'typeof Validator'?


==== jsdocConstructorFunctionTypeReference.js (1 errors) ====
    var Validator = function VFunc() {
        this.flags = "gim"
    };
    
    Validator.prototype.num = 12
    
    /**
     * @param {Validator} state
               ~~~~~~~~~
!!! error TS2749: 'Validator' refers to a value, but is being used as a type here. Did you mean 'typeof Validator'?
     */
    var validateRegExpFlags = function(state) {
        return state.flags
    };
    
    